crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__component_level_self_referential_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /* @__PURE__ */ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
// Component-level self-referential component
export const Foo = componentQrl(q__u6BtPnK76q4);
============================= test.tsx__u6BtPnK76q4.tsx (ENTRY POINT) ==
import { useAsync$ } from "@qwik.dev/core";
export const _u6BtPnK76q4 = (props) => {
	const sig = useAsync$(async ({cleanup}) => {
		const timer = setInterval(() => {
			sig.value++;
		}, 1000);
		cleanup(() => clearInterval(timer));
		return 0;
	});
	const other = useAsync$(async ({cleanup}) => {
		const timer = setInterval(() => {
			other.value++;
		}, 900);
		cleanup(() => clearInterval(timer));
		return 0;
	});
	return (
		<div>
			{other.value}
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    125,
    534
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_component_1_vX1B9oMEgiI.tsx (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const component_1_vX1B9oMEgiI = async ({ cleanup }) => {
	const other = _captures[0];
	const timer = setInterval(() => {
		other.value++;
	}, 900);
	cleanup(() => clearInterval(timer));
	return 0;
};

/*
{
  "origin": "test.tsx",
  "name": "component_1_vX1B9oMEgiI",
  "entry": null,
  "displayName": "test.tsx_component_1",
  "hash": "vX1B9oMEgiI",
  "canonicalFilename": "test.tsx_component_1_vX1B9oMEgiI",
  "path": "",
  "extension": "tsx",
  "parent": "_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "useAsync$",
  "captures": true,
  "captureNames": [
    "other"
  ],
  "loc": [
    330,
    482
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
============================= test.tsx_component_ZUK1E201Ins.tsx (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const component_ZUK1E201Ins = async ({ cleanup }) => {
	const sig = _captures[0];
	const timer = setInterval(() => {
		sig.value++;
	}, 1e3);
	cleanup(() => clearInterval(timer));
	return 0;
};

/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "tsx",
  "parent": "_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "useAsync$",
  "captures": true,
  "captureNames": [
    "sig"
  ],
  "loc": [
    162,
    313
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==
[]
