crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__destructure_args_colon_props.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
export const test_component_LUXeXe0DQrg = (props) => {
			const { 'bind:value': bindValue } = props;
			return (
				<>
				{bindValue}
				</>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    65,
    188
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
