crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__destructure_args_inline_cmp_block_stmt.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const q_test_div_q_e_click_pFqTss400MA = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_div_q_e_click_pFqTss400MA"), "test_div_q_e_click_pFqTss400MA");
//
export default (_rawProps) => {
    const data = _rawProps.data;
    return _jsxSorted("div", {
        "data-is-active": data.selectedOutputDetail === "options",
        "q-e:click": q_test_div_q_e_click_pFqTss400MA.w([data])
    }, null, null, 1, "0");
};

============================= test.tsx_test_div_q_e_click_pFqTss400MA.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_div_q_e_click_pFqTss400MA = () => {
    const data = _captures[0];
    data.selectedOutputDetail = "options";
};

/*
{
  "origin": "test.tsx",
  "name": "test_div_q_e_click_pFqTss400MA",
  "entry": null,
  "displayName": "test.tsx_test_div_q_e_click",
  "hash": "pFqTss400MA",
  "canonicalFilename": "test.tsx_test_div_q_e_click_pFqTss400MA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "data"
  ],
  "loc": [
    180,
    258
  ]
}
*/
== DIAGNOSTICS ==
[]
