crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_1.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 832
expression: output
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component, onRender } from "@qwik.dev/core";
const q_renderHeader1_div_onClick_USi8k1jUb40 = /*#__PURE__*/ qrl(() => import("./test.tsx_renderHeader1_div_onClick_USi8k1jUb40"), "renderHeader1_div_onClick_USi8k1jUb40");
const q_renderHeader1_jMxQsjbyDss = /*#__PURE__*/ qrl(() => import("./test.tsx_renderHeader1_jMxQsjbyDss"), "renderHeader1_jMxQsjbyDss");
const q_renderHeader2_PJjSfD4ZE08 = /*#__PURE__*/ qrl(() => import("./test.tsx_renderHeader2_PJjSfD4ZE08"), "renderHeader2_PJjSfD4ZE08");
export const renderHeader1 = q_renderHeader1_jMxQsjbyDss;
const renderHeader2 = component(q_renderHeader2_PJjSfD4ZE08);

============================= test.tsx_renderHeader1_jMxQsjbyDss.tsx (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const renderHeader1_jMxQsjbyDss = () => {
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "renderHeader1_jMxQsjbyDss",
  "entry": null,
  "displayName": "test.tsx_renderHeader1",
  "hash": "jMxQsjbyDss",
  "canonicalFilename": "test.tsx_renderHeader1_jMxQsjbyDss",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    88,
    162
  ]
}
*/
============================= test.tsx_renderHeader2_PJjSfD4ZE08.tsx (ENTRY POINT) ==
export const renderHeader2_PJjSfD4ZE08 = () => {
	console.log("mount");
	return render;
};

/*
{
  "origin": "test.tsx",
  "name": "renderHeader2_PJjSfD4ZE08",
  "entry": null,
  "displayName": "test.tsx_renderHeader2",
  "hash": "PJjSfD4ZE08",
  "canonicalFilename": "test.tsx_renderHeader2_PJjSfD4ZE08",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    196,
    247
  ]
}
*/
============================= test.tsx_renderHeader1_div_onClick_USi8k1jUb40.tsx (ENTRY POINT) ==
export const renderHeader1_div_onClick_USi8k1jUb40 = (ctx) => console.log(ctx);

/*
{
  "origin": "test.tsx",
  "name": "renderHeader1_div_onClick_USi8k1jUb40",
  "entry": null,
  "displayName": "test.tsx_renderHeader1_div_onClick",
  "hash": "USi8k1jUb40",
  "canonicalFilename": "test.tsx_renderHeader1_div_onClick_USi8k1jUb40",
  "path": "",
  "extension": "tsx",
  "parent": "renderHeader1_jMxQsjbyDss",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    124,
    152
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
== DIAGNOSTICS ==
[]
