crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_10.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 833
expression: output
---
============================= project/test.tsx ==
import { qrl } from "@qwik.dev/core";
//
const q_Header_WlR3xnI6u38 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_WlR3xnI6u38"), "Header_WlR3xnI6u38");
//
const Header = q_Header_WlR3xnI6u38;
============================= project/test.tsx_Header_WlR3xnI6u38.tsx (ENTRY POINT) ==
export const Header_WlR3xnI6u38 = (decl1, {decl2}, [decl3]) => {

	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], {ident7}, {key: ident8});
	class Some {
		prop = ident9;
		method() {
			return ident10;
		}
	}

	return (
		<div onClick={(ident11) => ident11 + ident12} required={false}/>
	)
};
/*
{
  "origin": "project/test.tsx",
  "name": "Header_WlR3xnI6u38",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WlR3xnI6u38",
  "canonicalFilename": "test.tsx_Header_WlR3xnI6u38",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    64,
    393
  ],
  "paramNames": [
    "decl1",
    "decl2",
    "decl3"
  ]
}
*/
== DIAGNOSTICS ==
[]
