crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_11.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= project/test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$ } from "@qwik.dev/core";
import { foo, bar as bbar } from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";
export const Header = qrl(() => import("./test.tsx_Header_component_UVBJuFYfvDo"), "Header_component_UVBJuFYfvDo");
export const App = qrl(() => import("./test.tsx_App_component_wGkRHWXaqjs"), "App_component_wGkRHWXaqjs");

============================= project/test.tsx_Header_component_Header_onClick_KjD9TCNkNxY.tsx ==
import { default as dep3 } from "dep3/something";
export const Header_component_Header_onClick_KjD9TCNkNxY = (ev) => dep3(ev);

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_Header_onClick_KjD9TCNkNxY",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component_Header_onClick",
  "hash": "KjD9TCNkNxY",
  "canonicalFilename": "test.tsx_Header_component_Header_onClick_KjD9TCNkNxY",
  "path": "project",
  "extension": "tsx",
  "parent": "Header_component_UVBJuFYfvDo",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    228,
    247
  ],
  "paramNames": [
    "ev"
  ]
}
*/
============================= project/test.tsx_Header_component_UVBJuFYfvDo.tsx ==
import { $ } from "@qwik.dev/core";
import { Header } from "./test";
import { bar as bbar } from "../state";
import { * as dep2 } from "dep2";
import { default as dep3 } from "dep3/something";
export const Header_component_UVBJuFYfvDo = () => {
	return (
		<Header onClick={$((ev) => dep3(ev))}>
			{dep2.stuff()}{bbar()}
		</Header>
	);
};
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "test.tsx_Header_component_UVBJuFYfvDo",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    180,
    294
  ]
}
*/
============================= project/test.tsx_App_component_wGkRHWXaqjs.tsx ==
import { Header } from "./test";
import { foo } from "../state";
export const App_component_wGkRHWXaqjs = () => {
	return (
		<Header>{foo()}</Header>
	);
};
/*
{
  "origin": "project/test.tsx",
  "name": "App_component_wGkRHWXaqjs",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "wGkRHWXaqjs",
  "canonicalFilename": "test.tsx_App_component_wGkRHWXaqjs",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    316,
    378
  ]
}
*/
== DIAGNOSTICS ==
[]
