crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Header_component_J4uyIhaBNR4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_J4uyIhaBNR4"), "Header_component_J4uyIhaBNR4");
//
export const Header = /*#__PURE__*/ componentQrl(q_Header_component_J4uyIhaBNR4);

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
export const Header_component_J4uyIhaBNR4 = () => {
	console.log("mount");
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    71,
    177
  ]
}
*/
============================= test.tsx_Header_component_div_div_onClick_MQvnAt86M4Y.tsx (ENTRY POINT) ==
export const Header_component_div_div_onClick_MQvnAt86M4Y = (ctx) => console.log(ctx);

/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_div_onClick_MQvnAt86M4Y",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_div_onClick",
  "hash": "MQvnAt86M4Y",
  "canonicalFilename": "test.tsx_Header_component_div_div_onClick_MQvnAt86M4Y",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_J4uyIhaBNR4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    139,
    167
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
== DIAGNOSTICS ==
[]
