crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_3.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 834
expression: output
---
== DIAGNOSTICS ==
[
  {
    "scope": "optimizer",
    "category": "sourceError",
    "code": null,
    "file": "test.tsx",
    "message": "Expected a semicolon or an implicit semicolon after a statement, but found none"
  }
]
